# bookmarks-indicator

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  bookmarks-indicator.cpp  bookmarks-indicator.py  config  folder-indicator  folder-indicator.py
.github/workflows/: builds.yml
extras/: import-sftp
icons/: LICENSE
include/bkm/: Config.h  MainWindow.h  MenuItemBase.h  MenuItemFileOpen.h  MenuItemFolderContent.h  MenuItemFolderOpenInExplorer.h  MenuItemFolderOpenInShell.h  MenuItemFolderOpenInTerminal.h  MenuItemGithub.h  MenuItemLabel.h  MenuItemQuit.h  OpenServiceProvider.h  StableCallback.h  Utils.h
